# mykg

./: .gitignore  CLAUDE.md  LICENSE  README.md  architecture.md  basetbox.ttl  context_calculator.py  mykg_config.yaml  pipeline_config.yaml  pyproject.toml  sample.env  sample.env.mykg
.claude/: settings.json
.claude/agents/: adversarial-architect.md  data-architect.md  software-architect.md  system-architect.md
.claude/skills/design-architecture/: SKILL.md
.claude/skills/networkx/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: agent-mode.md  architecture.md  blog_article.md  implementation-alternatives.md  release_workflow.md
docs/diagrams/: architecture.html  blog-overview.excalidraw  orphan-pass.html  pipeline-flow.html  system-overview.html
docs/examples/domain-separation/: domain-separation.md  mykg_config.yaml
prompts/feedback/: normalize_system.txt  orphan_connect_system.txt  schema_extend_system.txt  schema_system.txt  user_template.txt
prompts/normalize/: system.txt
prompts/orphan/: chunk_recovery_system.txt  pair_confirm_system.txt  schema_gap_system.txt
prompts/pass1/: system.txt
prompts/pass2/: system.txt
prompts/schema_merge/: harmonize_system.txt  merge_harmonize_system.txt  merge_quality_system.txt  quality_system.txt
scripts/: live_test_grow_schema.py  live_test_report.md
src/mykg/: __init__.py  __main__.py  assembler.py  base_schema.py  chunker.py  cli.py  config.py  exporter.py  feedback.py  fetch_web.py  ids.py  logging.py  merge_context.py  merge_orchestrator.py  merge_pipeline.py  merge_run.py  merger.py  name_normalizer.py  orchestrator.py  orphan_connector.py  pass1.py  pass2.py  pass2_batch.py  pass2_concat.py  pipeline.py  prompts.py  schema_flattener.py  schema_history.py  schema_merge.py  schema_validator.py  thesaurus.py  ttl_validator.py  uv_venv.py  walkthrough.py
src/mykg/data/: _crawl_runner.py  claude_md_snippet.md  mykg_config.yaml
src/mykg/llm/: adapter.py  anthropic_adapter.py  claude_cli_adapter.py  config.py  error_gate.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py  retry.py
src/mykg/steps/: grow_schema_backfill.py  step_assemble.py  step_ingest.py  step_merge_manifest.py  step_merge_raw.py  step_merge_reextract.py  (+11 more)
tests/: conftest.py  test_append.py  test_assembler.py  test_atomic_io.py  test_base_schema.py  test_chunker.py  test_claude_cli_adapter.py  test_cli_commands.py  test_cli_grow_schema.py  test_cli_init.py  test_context_calculator.py  test_error_gate.py  test_exporter.py  test_extraction_edge_paths.py  test_feedback.py  test_fetch_web.py  test_grow_schema_backfill.py  test_grow_schema_e2e.py  test_ids.py  test_init.py  test_live_pipeline.py  test_llm_adapter.py  test_llm_adapters.py  test_log_rotation.py  test_merge_orchestrator.py  test_merge_pipeline.py  test_merge_run.py  test_merger.py  test_name_normalizer.py  test_neo4j_common.py  test_neo4j_e2e_fixture.py  test_neo4j_load_csv.py  test_orchestrator.py  test_orphan_connector.py  test_orphan_steps.py  test_parse_docs.py  test_parse_docs_cli.py  test_pass1.py  test_pass2.py  test_pass2_batch.py  (+14 more)
(+91 files in other folders)
