[project]
name = "mykg"
version = "0.1.0"
description = "Two-pass Markdown-to-knowledge-graph extractor"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "tiktoken>=0.6",
    "anthropic>=0.28",
    "openai>=1.30",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "networkx>=3.6.1",
]

[project.scripts]
mykg = "mykg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mykg"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4",
    "snakeviz>=2.2.2",
]

[tool.pytest.ini_options]
addopts = "--cov=mykg --cov-report=term-missing --cov-report=html"
markers = [
    "live: marks tests that make real network/API calls (deselect with '-m not live')",
]

[tool.coverage.run]
source = ["src/mykg"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
