[project]
name = "mykg"
version = "0.2.22"
description = "AI workflow that turns documents into a confidence-scored knowledge graph with an inferred RDFS/OWL ontology"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Senol Isci", email = "senolisci081978@gmail.com" }
]
keywords = ["knowledge-graph", "llm", "rdf", "rdfs", "ontology", "nlp", "markdown", "pdf", "obsidian", "second-brain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "tiktoken>=0.6",
    "anthropic>=0.28",
    "openai>=1.30",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "networkx>=3.6.1",
    "uv>=0.4",
    "markdownify>=0.13",
]

[project.scripts]
mykg = "mykg.cli:main"
context-calculator = "mykg.utility.context_calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mykg"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4",
    "snakeviz>=2.2.2",
]

[tool.pytest.ini_options]
addopts = "--cov=mykg --cov-report=term-missing --cov-report=html"
markers = [
    "live: marks tests that make real network/API calls (deselect with '-m not live')",
]

[tool.coverage.run]
source = ["src/mykg"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
